karnc/tests/fixtures/negative/113_cron_duplicate_schedule/src/svc.karn
context svc

service sweeper from cron {
  on schedule("*/5 * * * *") () -> Effect[Result[(), String]] {
    Ok(())
  }

  on schedule("*/5 * * * *") () -> Effect[Result[(), String]] {
    Ok(())
  }
}
